# prj_euler

./: .gitignore  README.md  pyproject.toml
prj_euler/: euler001.py  euler002.py  euler003.py  euler004.py  euler005.py
tests/: test_prj_euler.py
