[tool.poetry]
name = "prj_euler"
version = "0.1.0"
description = ""
authors = ["tkhshtsh0917 <48384135+tkhshtsh0917@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
isort = "^5.6.4"
mypy = "^0.790"
pylint = "^2.6.0"
memory-profiler = "^0.58.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
